--- a/Implementation/Networking/Networking.vcxproj
+++ b/Implementation/Networking/Networking.vcxproj
@@ -86,7 +86,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Connection.h" />
+    <ClInclude Include="Deserializable.h" />
     <ClInclude Include="DLL_Example.h" />
+    <ClInclude Include="Serializable.h" />
     <ClInclude Include="Serialize.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
