--- a/Implementation/Networking/Networking.vcxproj.filters
+++ b/Implementation/Networking/Networking.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClInclude Include="Connection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Deserializable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Serializable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
